--- a/index.html
+++ b/index.html
@@ -2,22 +2,33 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>NOAA – Dane typu DataTypes</title>
+  <title>NOAA – Dane z endpointu /data</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Dane typu <code>/datatypes</code> z NOAA API</h1>
+  <h1>NOAA – Dane klimatyczne z endpointu /data</h1>
 
-  <button onclick="getDataTypes()">Pobierz dane</button>
+  <div class="form">
+    <label>Dataset ID:</label>
+    <input id="dataset" type="text" value="GHCND">
+    <label>Location ID:</label>
+    <input id="location" type="text" value="ZIP:28801">
+    <label>Data początkowa:</label>
+    <input id="start" type="date" value="2010-05-01">
+    <label>Data końcowa:</label>
+    <input id="end" type="date" value="2010-05-01">
+    <button onclick="getData()">Pobierz dane</button>
+  </div>
 
   <p id="message"></p>
 
   <table id="table" border="1" hidden>
     <thead>
       <tr>
-        <th>ID</th>
-        <th>Nazwa</th>
-        <th>Opis</th>
+        <th>Data</th>
+        <th>Stacja</th>
+        <th>Typ</th>
+        <th>Wartość</th>
       </tr>
     </thead>
     <tbody id="tbody"></tbody>
